--- a/ColorfulBox/ColorfulBox/MainPage.xaml
+++ b/ColorfulBox/ColorfulBox/MainPage.xaml
@@ -38,6 +38,11 @@
                     <local:AnalogousStrategy/>
                 </ComboBoxItem.Tag>
             </ComboBoxItem>
+            <ComboBoxItem Content="Complementary">
+                <ComboBoxItem.Tag>
+                    <local:ComplementaryStrategy/>
+                </ComboBoxItem.Tag>
+            </ComboBoxItem>
         </ComboBox>
         <Rectangle Grid.Row="1" Fill="#33888888" Grid.ColumnSpan="10"/>
         <local:HsvWheelColorPalette x:Name="ColorPalette"
